Fixed some of the quoted material.

--- a/db/quotes.yml
+++ b/db/quotes.yml
@@ -28,7 +28,7 @@
   attribution: George Shinn
 
 - !ruby/object:Quote_
-  en: It is literally true that you can succeed best and quickest by helping others to succeed.
+  en: "It is literally true that you can succeed best and quickest by helping others to succeed."
   attribution: Napolean Hill
 
 - !ruby/object:Quote_
@@ -36,7 +36,7 @@
   attribution: Kurt Koffka
 
 - !ruby/object:Quote_
-  en: The ratio of Wes to Is is the best indicator of the development of a team.
+  en: "The ratio of 'We's to 'I's is the best indicator of the development of a team."
   attribution: Lewis B. Ergen
 
 - !ruby/object:Quote_
@@ -44,7 +44,7 @@
   attribution: Booker T. Washington
 
 - !ruby/object:Quote_
-  en: Great things in business are never done by one person; they're done by a team of people.
+  en: "Great things in business are never done by one person; they're done by a team of people."
   attribution: Steve Jobs
 
 - !ruby/object:Quote_
@@ -56,7 +56,7 @@
   attribution: Virginia Burden
 
 - !ruby/object:Quote_
-  en: Dialogue isnt a competition to be the smartest or the most correct person in the room; it is a collaboration to find the truth.
+  en: "Dialogue isn't a competition to be the smartest or the most correct person in the room; it is a collaboration to find the truth."
   attribution: Oli Anderson
 
 - !ruby/object:Quote_
@@ -84,7 +84,7 @@
   attribution: Dr. Allan Fromme
 
 - !ruby/object:Quote_
-  en: Teamwork. A few harmless flakes working together can unleash an avalanche of destruction.
+  en: "Teamwork: A few harmless flakes working together can unleash an avalanche of destruction."
   attribution: Justin Sewell
 
 - !ruby/object:Quote_
